--- a/ThreadSafeQueue/CMakeLists.txt
+++ b/ThreadSafeQueue/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Find necessary packages
-find_package(spdlog REQUIRED)
+find_package(spdlog 1.9.0 REQUIRED)
 
 # Add a cmake binary taget (in this case, a library)
 add_library(ThreadSafeQueue ThreadSafeQueue.cpp ThreadSafeQueue.hpp)
