Add first working dummy version of threaded example, where main keeps putting events into Toaster's queue;

--- a/ToasterActiveObject/CMakeLists.txt
+++ b/ToasterActiveObject/CMakeLists.txt
@@ -6,6 +6,9 @@ add_library(Events Events.cpp Events.hpp)
 # Add a cmake binary taget (in this case, a library)
 add_library(ToasterActiveObject ToasterActiveObject.cpp ToasterActiveObject.hpp)
 
+# Link library to a binary target
+target_link_libraries(ToasterActiveObject PUBLIC Events)
+
 # Make the directory known
 target_include_directories(ToasterActiveObject PUBLIC ${CMAKE_SOURCE_DIR}/ThreadSafeQueue)
 # Link library to a binary target
