Move definition of DeadlineTimer to a specific folder so that it can be used by other Demos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,13 @@ set(TARGET_GROUP helloworld CACHE STRING "Specify the TARGET_GROUP?")
 
 if(TARGET_GROUP STREQUAL DemoThreadSafeQueue)
   add_subdirectory(ThreadSafeQueue)
-  elseif(TARGET_GROUP STREQUAL DemoActiveObject)
+elseif(TARGET_GROUP STREQUAL DemoActiveObject)
   add_subdirectory(ActiveObject)
-  elseif(TARGET_GROUP STREQUAL DemoToasterActiveObject)
+elseif(TARGET_GROUP STREQUAL DemoToasterActiveObject)
   add_subdirectory(ThreadSafeQueue)
   add_subdirectory(ToasterActiveObject)
+elseif(TARGET_GROUP STREQUAL DemoBoostDeadlineTimer)
+  add_subdirectory(BoostDeadlineTimer)
 endif()
 
 add_subdirectory("${TARGET_GROUP}")
