--- a/ToasterActiveObject/CMakeLists.txt
+++ b/ToasterActiveObject/CMakeLists.txt
@@ -1,20 +1,30 @@
 # Find necessary packages
 find_package(Boost 1.74.0 REQUIRED)
 
-# Add a cmake binary taget (in this case, a library)
-add_library(Events Events.cpp Events.hpp)
-# Add a cmake binary taget (in this case, a library)
-add_library(ToasterActiveObject ToasterActiveObject.cpp ToasterActiveObject.hpp)
+# ******************************************************************************
+# **** Creates binary targets ****
+# ******************************************************************************
+# Add a cmake binary taget (in this case, libraries)
+add_library(Events
+            Events.cpp
+            Events.hpp)
+add_library(ToasterActiveObject
+            ToasterActiveObject.cpp
+            ToasterActiveObject.hpp)
 
-# Link library to a binary target
-target_link_libraries(ToasterActiveObject PUBLIC Events)
+# ******************************************************************************
+# **** Make all other directories known to this one ****
+# ******************************************************************************
+target_include_directories(ToasterActiveObject PUBLIC 
+                            ${Boost_INCLUDE_DIR}
+                            ${CMAKE_SOURCE_DIR}/ThreadSafeQueue
+                            ${CMAKE_SOURCE_DIR}/BoostDeadlineTimer)
 
-# Make the directory known
-target_include_directories(ToasterActiveObject PUBLIC ${CMAKE_SOURCE_DIR}/ThreadSafeQueue)
-# Link library to a binary target
-target_link_libraries(ToasterActiveObject PUBLIC ThreadSafeQueue)
-
-# Make the directory known
-target_include_directories(ToasterActiveObject PUBLIC ${Boost_INCLUDE_DIR})
-# Link library to a binary target
-target_link_libraries(ToasterActiveObject PUBLIC ${Boost_LIBRARIES})
+# ******************************************************************************
+# **** Link the libraries ****
+# ******************************************************************************
+target_link_libraries(ToasterActiveObject PUBLIC
+                        ${Boost_LIBRARIES}
+                        Events
+                        ThreadSafeQueue
+                        BoostDeadlineTimer)
