Change directory structure so that it is more organized;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(my_cpp)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 # Variable TARGET_GROUP should be passed as an argument when calling cmake
 set(TARGET_GROUP helloworld CACHE STRING "Specify the TARGET_GROUP?")
 
-if(TARGET_GROUP STREQUAL DemoThreadSafeQueue)
-  add_subdirectory(ThreadSafeQueue)
-elseif(TARGET_GROUP STREQUAL DemoActiveObject)
-  add_subdirectory(ActiveObject)
-elseif(TARGET_GROUP STREQUAL DemoToasterActiveObject)
-  add_subdirectory(ThreadSafeQueue)
-  add_subdirectory(ToasterActiveObject)
-  add_subdirectory(BoostDeadlineTimer)
-elseif(TARGET_GROUP STREQUAL DemoBoostDeadlineTimer)
-  add_subdirectory(BoostDeadlineTimer)
-endif()
-
+add_subdirectory(lib)
 add_subdirectory("${TARGET_GROUP}")
