--- a/DemoBoostDeadlineTimer/CMakeLists.txt
+++ b/DemoBoostDeadlineTimer/CMakeLists.txt
@@ -2,6 +2,6 @@
 add_executable(main main.cpp)
 
 # Make the directory known
-target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/BoostDeadlineTimer)
+target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/lib/BoostDeadlineTimer)
 # Link library to a binary target
 target_link_libraries(main PUBLIC BoostDeadlineTimer)
