Add unit tests for BoostDeadlineTimer module;

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -8,4 +8,9 @@ elseif(TARGET_GROUP STREQUAL DemoToasterActiveObject)
   add_subdirectory(BoostDeadlineTimer)
 elseif(TARGET_GROUP STREQUAL DemoBoostDeadlineTimer)
   add_subdirectory(BoostDeadlineTimer)
+elseif(TARGET_GROUP STREQUAL test)
+  add_subdirectory(ActiveObject)
+  add_subdirectory(ThreadSafeQueue)
+  add_subdirectory(ToasterActiveObject)
+  add_subdirectory(BoostDeadlineTimer)
 endif()
