Add unit tests for ThreadSafeQueue module;

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,17 +20,21 @@ enable_testing()
 
 # Define cmake binary taget (in this case, an executable)
 add_executable(${UNIT_TESTS_CMAKE_TARGET}
-    testHelloWorld.cpp
     testBoostDeadlineTimer.cpp
+    testThreadSafeQueue.cpp
 )
 
 # Make the directory known
-target_include_directories(${UNIT_TESTS_CMAKE_TARGET} PUBLIC ${CMAKE_SOURCE_DIR}/lib/BoostDeadlineTimer)
+target_include_directories(${UNIT_TESTS_CMAKE_TARGET} PUBLIC
+    ${CMAKE_SOURCE_DIR}/lib/BoostDeadlineTimer
+    ${CMAKE_SOURCE_DIR}/lib/ThreadSafeQueue
+)
 
 # Link library to the binary target. GTest::gtest_main offers me a default main() function
 target_link_libraries(${UNIT_TESTS_CMAKE_TARGET}
     GTest::gtest_main
     BoostDeadlineTimer
+    ThreadSafeQueue
 )
 
 # Enable CMake’s test runner to discover the tests included in the binary
