Add external lib folder and StateManager files. House keeping and cleanup.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,3 +1,2 @@
-add_subdirectory(ThreadSafeQueue)
+add_subdirectory(Infrastructure)
 add_subdirectory(ToasterActiveObject)
-add_subdirectory(BoostDeadlineTimer)
