--- a/lib/ToasterActiveObject/CMakeLists.txt
+++ b/lib/ToasterActiveObject/CMakeLists.txt
@@ -19,8 +19,8 @@ add_library(ToasterActiveObject
 # ******************************************************************************
 target_include_directories(ToasterActiveObject PUBLIC 
                             ${Boost_INCLUDE_DIR}
-                            ${CMAKE_SOURCE_DIR}/lib/ThreadSafeQueue
-                            ${CMAKE_SOURCE_DIR}/lib/BoostDeadlineTimer)
+                            ${CMAKE_SOURCE_DIR}/lib/Infrastructure/ThreadSafeQueue
+                            ${CMAKE_SOURCE_DIR}/lib/Infrastructure/BoostDeadlineTimer)
 
 # ******************************************************************************
 # **** Link the libraries ****
