--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,5 @@
+add_subdirectory(ActiveObjects)
 add_subdirectory(Actuators)
 add_subdirectory(Infrastructure)
 add_subdirectory(Sensors)
-add_subdirectory(ToasterActiveObject)
+#add_subdirectory(ToasterActiveObject)
