Checkpoint 5 towards fixing Issue#2

--- a/lib/Sensors/CMakeLists.txt
+++ b/lib/Sensors/CMakeLists.txt
@@ -1,1 +1,13 @@
-add_library(Sensors INTERFACE Sensors.hpp)
+# Add a cmake binary taget (in this case, a library)
+add_library(Sensors Sensors.cpp Sensors.hpp)
+
+target_include_directories(Sensors PUBLIC
+    ${CMAKE_SOURCE_DIR}/lib/DemoObjects
+    ${CMAKE_SOURCE_DIR}/lib/Infrastructure/Event
+    ${CMAKE_SOURCE_DIR}/lib/Infrastructure/BoostDeadlineTimer)
+
+
+target_link_libraries(Sensors PUBLIC
+    DemoObjects
+    Event
+    BoostDeadlineTimer)
