Checkpoint 6 towards fixing Issue#2

--- a/lib/Actuators/CMakeLists.txt
+++ b/lib/Actuators/CMakeLists.txt
@@ -1,1 +1,11 @@
-add_library(Actuators INTERFACE Actuators.hpp)
+# Add a cmake binary taget (in this case, a library)
+add_library(Actuators Actuators.cpp Actuators.hpp)
+
+target_include_directories(Actuators PUBLIC
+    ${CMAKE_SOURCE_DIR}/lib/DemoObjects
+    ${CMAKE_SOURCE_DIR}/lib/Infrastructure/BoostDeadlineTimer)
+
+
+target_link_libraries(Actuators PUBLIC
+    DemoObjects
+    BoostDeadlineTimer)
